prevent line break inside label

--- a/mythos.css
+++ b/mythos.css
@@ -2,6 +2,10 @@
 	display: none;
 }
 
+#srcb {
+	display: inline-block;
+}
+
 #header {
 	display: flex;
 }
